[proxy-providers] Updated to latest Hib/Spring